tests/unit/default/syntax-error/152-alter-table.e.t
---- IN ----
*%table
---- OUT ----
---- ERR ----
syntax: expected <alter-statement-spec> after `*%table` instead of EOL at position 7 - at line 1
---- EXIT ----
1
